# core

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE
.ci-scripts/: install-caf.sh  install-cmake.sh
src/: broker.cpp  broker.hpp  config.cpp  config.hpp  main.cpp  server.cpp  server.hpp
src/actor/: pong.cpp  pong.hpp  pong_msg.cpp  pong_msg.hpp
